Adds real content, including some images. Also adds some more example content and 1 placeholder image (badge-stolen.png via googleventures.com).

--- a/content/doc-war/api.html
+++ b/content/doc-war/api.html
@@ -1,7 +1,14 @@
 ---
 index: 1
 title: "API Overview"
+desription: Wumpus-Arduino-Redux is an open-source hardware schematic and API, provided as an electrical and programming platform so that students may focus their efforts on the design of their robotic agent and their algorithmic solution to the Wumpus World problem.
 ---
+
+<div class="hero-unit">
+  <p><a href="https://github.com/AsherGlick/Wumpus-Arduino-Redux">Wumpus-Arduino-Redux</a> is an <strong>open-source hardware schematic and API</strong>, provided as an electrical and programming platform so that students may focus their efforts on the design of their robotic agent and their algorithmic solution to the <strong>Wumpus World problem</strong>.</p>
+  <!-- above text from RPI Course Catalog, 2012-13 ed. -->
+  <div id="badge" style="background-image:url('{{ media_url('img/badge-stolen.png') }}');"></div>
+</div>
 
 # Overview of [Wumpus Ardiuno Redux](https://github.com/AsherGlick/Wumpus-Arduino-Redux) API, by Asher Glick
 
