--- a/content/final-projects/centipede.html
+++ b/content/final-projects/centipede.html
@@ -1,7 +1,7 @@
 ---
 index: 1
 title: "Centipede Experiment"
-description: Students have the opportunity to conduct research sampling their classmates’ behavior in a simple game. What is rational behavior in the game of Centipede? Do players make rational decisions? Students analyze specific questions in a response up to 1500 words long.
+description: Students have the opportunity to conduct research sampling their classmates' behavior in a simple game. What is rational behavior in the game of Centipede? Do players make rational decisions? Students analyze specific questions in a response up to 1500 words long.
 ---
 
 
