--- a/content/final-projects/connect4.html
+++ b/content/final-projects/connect4.html
@@ -8,7 +8,7 @@ description: Students have the opportunity to program their own Connect 4 AI pro
 <div class="hero-unit">
   <p>Students have the opportunity to program their own <strong>Connect 4 AI programs</strong> which compete in a tournament moderated by a really shiny program.</p>
   <!-- above text adapted from http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&M/Connect4/Connect4.htm -->
-  <div id="badge" style="background-image:url('http://placehold.it/64x64');"></div>
+  <div id="badge" style="background-image:url('{{ media_url('img/badge-c4.png') }}');"></div>
 </div>
 
 
@@ -24,4 +24,58 @@ At the end of this course, selected and interested students will have the opport
 * [Moderator Program](http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&M/Connect4/AIs/c4mod.exe)
 * [Presentation With Some Basic Strategies](http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&M/Connect4/AI%20for%20Connect-4.pptx)
 * [Instructions for Write Up](http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&M/Connect4/Connect4WriteUp.doc)
+
+
+# Legendary _Connect 4_ AIs from years past!
+
+<div class="row-fluid">
+  <div class="span6">
+    <dl class="dl-horizontal well">
+      <dt>2009</dt>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/Steve.exe">Steve</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/Philip.exe">Philip</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/Paul.exe">Paul</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/Nick.exe">Nick</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/Michael.exe">Michael</a> <em>The New Reigning Champion!!</em></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/KevinSullivan.exe">KevinSu</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/KevinStangl.exe">KevinSt</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/Justin.exe">Justin</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/Jeff.exe">Jeff</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/Ian.exe">Ian</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/Colin.exe">Colin</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/Chris.exe">Chris</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/Asher.exe">Asher</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2009/Andrew.exe">Andrew</a></dd>
+    </dl>
+  </div>
+  <div class="span6">
+    <dl class="dl-horizontal well">
+      <dt>2008</dt>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2008/Alex.exe">Alex</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2008/Eric.exe">Eric</a> (requires <a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2008/cygwin1.dll">cygwin1.dll</a>)</dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2008/Joe.exe">Joe</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2008/Mike.exe">Mike</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2008/Nick.exe">Nick</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2008/Stacy.exe">Stacy</a> (requires <a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2008/player.txt">player.txt</a>)</dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2008/Tianhe.exe">Tianhe</a> (requires <a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2008/cygwin1.dll">cygwin1.dll</a>)</dd>
+      <dt>2007</dt>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2007/Patrick.exe">Patrick</a></dd>
+      <dt>2006</dt>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2006/Doug.exe">Doug</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2006/Greg.exe">Greg</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2006/Johanna.exe">Johanna</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2006/John.exe">John</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2006/Simon.exe">Simon</a></dd>
+      <dt>2005</dt>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2005/Andy.exe">Andrew</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2005/Dan.exe">Dan</a> (<a href="AIs/2005/Dan5.exe">Dan5</a>)</dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2005/Elliot.exe">Elliot</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2005/Matt.exe">Matt</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2005/Mike.exe">Mike</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2005/Robert.exe">Robert</a></dd>
+        <dd><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Connect4/AIs/2005/Steven.exe">Steven</a></dd>
+    </dl>
+  </div>
+</div>
+
 
