--- a/content/final-projects/wumpus-world.html
+++ b/content/final-projects/wumpus-world.html
@@ -8,7 +8,7 @@ decsription: Students have the opportunity to build a LEGO robot to solve the Wu
 <div class="hero-unit">
   <p>Students have the opportunity to build a <strong>LEGO robot</strong> to solve the <strong>Wumpus World Problem</strong>&#8211; the robot must navigate a 4x4 grid filled with clues and hazards to <strong>autonomously get the gold and return home safely</strong>. This non-trivial problem requires students to think about perception, action, reasoning, and decision making.</p>
   <!-- above text adapted from http://www.cogsci.rpi.edu/~heuveb/Teaching/M&M/WumpusWorld/WumpusWorld.htm -->
-  <div id="badge" style="background-image:url('http://placehold.it/64x64');"></div>
+  <div id="badge" style="background-image:url('{{ media_url('img/badge-wumpus.png') }}');"></div>
 </div>
 
 
