--- a/content/syllabus.html
+++ b/content/syllabus.html
@@ -7,7 +7,7 @@ title: "Syllabus"
 <div class="hero-unit">
   <p>This couse is an introduction to the philosophy of mind. Students will debate and write papers on the nature of mind, free will, personal identity, consciousness, artificial intelligence, and animal cognition.</p>
   <!-- above text from RPI Course Catalog, 2012-13 ed. -->
-  <div id="badge" style="background-image:url('http://placehold.it/64x64');"></div>
+  <div id="badge" style="background-image:url('{{ media_url('img/badge-syllabus.png') }}');"></div>
 </div>
 
 
