Styles nav for mobile using responsive design.

--- a/content/final-projects/centipede.html
+++ b/content/final-projects/centipede.html
@@ -1,12 +1,12 @@
 ---
 index: 1
 title: "Centipede Experiment"
-description: Students have the opportunity to conduct research sampling their classmates' behavior in a simple game. What is rational behavior in the game of Centipede? Do players make rational decisions? Students analyze specific questions in a response up to 1500 words long.
+description: Students have the opportunity to conduct research by sampling their classmates' behavior in a simple game. What is rational behavior in the game of Centipede? Do players make rational decisions? Students analyze specific questions in a 1500-word response.
 ---
 
 
 <div class="hero-unit">
-  <p>Students have the opportunity to <strong>conduct research</strong> sampling their classmates' <strong>behavior in a simple game</strong>. What is rational behavior in the game of Centipede? Do players make rational decisions? Students <strong>analyze specific questions</strong> in a response up to 1500 words long.</p>
+  <p>Students have the opportunity to <strong>conduct research</strong> by sampling their classmates' <strong>behavior in a simple game</strong>. What is rational behavior in the game of Centipede? Do players make rational decisions? Students <strong>analyze specific questions</strong> in a 1500-word response.</p>
   <!-- above text adapted from http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&M/Centipede/Centipede.html -->
   <div id="badge" style="background-image:url('http://placehold.it/64x64');"></div>
 </div>
