--- a/content/doc-c4/about.html
+++ b/content/doc-c4/about.html
@@ -19,7 +19,7 @@ description: The Connect 4 Moderator allows students' artificial intelligence pr
 
 
 # About this Program
-
+Test Test
 This program was created by [Daniel Bulger](http://dpbulger.com) and [Derek Schultz](http://derekschultz.net) for use by students in the Minds & Machines course at Rensselaer Polytechnic Institute.
 
 It is a cross-platform alternative to the previous moderator program.
