--- a/content/doc-c4/about.html
+++ b/content/doc-c4/about.html
@@ -20,7 +20,7 @@ description: The Connect 4 Moderator allows students' artificial intelligence pr
 
 # About this Program
 Test Test
-This program was created by [Daniel Bulger](http://dpbulger.com) and [Derek Schultz](http://derekschultz.net) for use by students in the Minds & Machines course at Rensselaer Polytechnic Institute.
+This program was created by [Daniel Bulger](https://github.com/daniel-bulger) and [Derek Schultz](http://derekschultz.net) for use by students in the Minds & Machines course at Rensselaer Polytechnic Institute.
 
 It is a cross-platform alternative to the previous moderator program.
 
@@ -33,7 +33,8 @@ You can impress them and earn their respect by finding them and giving them high
 
 # Installing the Connect 4 Moderator
 
-Installation packages for ConnectFourModerator are available for Windows, Mac, and Linux. You can also get the source code from Github and compile it yourself if you run [an unsupported operating system](http://plan9.bell-labs.com/plan9/).
+Installation packages for ConnectFourModerator are available for Windows.  Mac and Linux support was discontinued in later versions in order to ensure support for Windows :(
+You can get the source code from Github and compile it yourself if you run [an unsupported operating system](http://plan9.bell-labs.com/plan9/).
 
 <div class="row-fluid">
   <div class="span6">
