Improves Content and Responsive Design Mobile styling greatly improved for use with twitter bootstrap. Images created for content pages, minor text adjustments.

--- a/content/final-projects/centipede.html
+++ b/content/final-projects/centipede.html
@@ -8,7 +8,7 @@ description: Students have the opportunity to conduct research by sampling their
 <div class="hero-unit">
   <p>Students have the opportunity to <strong>conduct research</strong> by sampling their classmates' <strong>behavior in a simple game</strong>. What is rational behavior in the game of Centipede? Do players make rational decisions? Students <strong>analyze specific questions</strong> in a 1500-word response.</p>
   <!-- above text adapted from http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&M/Centipede/Centipede.html -->
-  <div id="badge" style="background-image:url('http://placehold.it/64x64');"></div>
+  <div id="badge" style="background-image:url('{{ media_url('img/badge-bar-graph.png') }}');"></div>
 </div>
 
 
