--- a/content/syllabus.html
+++ b/content/syllabus.html
@@ -1,6 +1,7 @@
 ---
 index: 2
 title: "Syllabus"
+description: "This course is a freshmen-only, Communication Intensive course and is taught every Fall semester. It serves as a springboard to other courses in philosophy, psychology, cognitive science, and artificial intelligence."
 ---
 
 
