--- a/content/thursday.html
+++ b/content/thursday.html
@@ -1,19 +1,20 @@
 ---
 index: 3
 title: "Thursday Night Lectures"
-description: On thursday nights all 5 sections come together and listen to a lecture and/or watch a movie or video pertaining to the material as discussed that week or the next week.
+description: On Thursday nights all 5 sections come together and listen to a lecture and/or watch a movie or video pertaining to the material as discussed that week or the next week.
 ---
 
 
 # Thursday Night Lectures (Fall 2012)
 
-On thursday nights all 5 sections come together and listen to a lecture and/or watch a movie or video pertaining to the material as discussed that week or the next week.
+On Thursday nights all 5 sections come together and listen to a lecture and/or watch a movie or video pertaining to the material as discussed that week or the next week.
 
 A note on laptops: You are allowed to use your laptop, but only for taking notes! (watching videos, playing games, surfing the net, chatting with other people, or any other form of laptop use that does not pertain directly to the material presented is not only rude but also distracts the people sitting behind you).
 
 
 ## Schedule
 
+<!--- following content via http://www.cogsci.rpi.edu/~heuveb/Teaching/M&M/Thursday.html -->
 <table class="table table-bordered table-condensed">
   <thead>
     <tr>
@@ -83,7 +84,7 @@ A note on laptops: You are allowed to use your laptop, but only for taking notes
       <td>11/1</td>
       <td>Cognition and Evolution</td>
       <td>Video: <em>Brain Power</em></td>
-      <td><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&M/Talks/EvolutionCognition2012.pptx">Evolution and Cognition</a></td>
+      <td><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&amp;M/Talks/EvolutionCognition2012.pptx">Evolution and Cognition</a></td>
     </tr>
     <tr>
       <td>11/8</td>
