--- a/content/index.html
+++ b/content/index.html
@@ -11,11 +11,11 @@ default_block: none  # because there is also a hero block on this page
 
 <div class="row-fluid">
   <div class="span12">
-    <p>What are minds? Are minds physical or non-physical? Does consciousness have a physical basis? If minds are purely physical, do we have free will? If we don't have free will, do we have moral responsibilities or rights? How is our personal identity defined ayway? How close are we to building a computer with capabilities similar to those of Commander Data as depicted in Star Trek NG? Should it share the same basic rights and responsibilities as those possessed by humans? Moreover, if we can "build a person" or, perhaps, "build better persons" (cyborgs, genetic engineering, nanotechnology), is this something we should do? Or should we prohibit such attempts?</p>
+    <p>What are minds? Are minds physical or non-physical? Does consciousness have a physical basis? If minds are purely physical, do we have free will? If we don't have free will, do we have moral responsibilities or rights? How is our personal identity defined anyway? How close are we to building a computer with capabilities similar to those of Commander Data as depicted in Star Trek NG? Should it share the same basic rights and responsibilities as those possessed by humans? Moreover, if we can "build a person" or, perhaps, "build better persons" (cyborgs, genetic engineering, nanotechnology), is this something we should do? Or should we prohibit such attempts?</p>
   </div>
 </div>
 
-If you are interested in exploring some of these conceptual and ethical questions regarding the nature of mind, this communication intensive course will get you jump-started. Students meet twice a week in small sections to have class discussions and debates about these issues. On thursday evenings, all sections come together to listen to a guest speaker talk about their research on the frontiers of artificial intelligence and cognitive science, or to watch a movie that is particularly relevant to the topic at hand. During the course, students will learn how to think critically, and how to express philosophical arguments in writing or through oral presentation. Final projects are hands-on: build an "intelligent" Lego Robot, write an AI program (one option is to program a Connect-4 AI), or actively participate in a cognitive psychology experiment.
+If you are interested in exploring some of these conceptual and ethical questions regarding the nature of mind, this communication intensive course will get you jump-started. Students meet twice a week in small sections to have class discussions and debates about these issues. On Thursday evenings, all sections come together to listen to a guest speaker talk about their research on the frontiers of artificial intelligence and cognitive science, or to watch a movie that is particularly relevant to the topic at hand. During the course, students will learn how to think critically, and how to express philosophical arguments in writing or through oral presentation. Final projects are hands-on: build an "intelligent" Lego Robot, write an AI program (one option is to program a Connect-4 AI), or actively participate in a cognitive psychology experiment.
 
 {% endblock content %}
 
@@ -27,7 +27,7 @@ If you are interested in exploring some of these conceptual and ethical question
   </div>
   <div class="span9">
     <h1>Minds &amp; Machines at Rensselaer Polytechnic Institute</h1>
-    <p class="hidden-tablet">Students in this course <strong>explore the nature of reasoning, perception, and learning</strong>, develop computational cognitive models, create intelligent artificial agents, engineer cognitive technology, and address philosophical questions about the fundamental nature of the human mind. <a href="{{ content_url('syllabus.html') }}">Read the Syllabus &raquo;</a></p>
+    <p class="hidden-tablet">Students in this course explore the nature of reasoning, perception, and learning, develop computational cognitive models, create intelligent artificial agents, engineer cognitive technology, and address philosophical questions about the fundamental nature of the human mind. <a href="{{ content_url('syllabus.html') }}">Read the Syllabus &raquo;</a></p>
     <!-- above text adapted from http://www.rpi.edu/academics/interdisciplinary/mindsmachines.html -->
   </div>
 </aside>
